# pypuz

./: CHANGES.txt  LICENSE  LICENSE.txt  README.md  README.txt  pyproject.toml  setup.py
pypuz/: __init__.py  pypuz.py
pypuz/file_types/: amuselabs.py  cfp.py  ipuz.py  jpz.py  puz.py
pypuz/test_files/: 3x.cfp  3x.ipuz  3x.jpz  3x.puz  3x.xml  FM.puz
